tsk-35: Update name of user (#38)
Closes #35

Reviewed-on: https://git.kundeng.us/phoenix/textsender-auth/pulls/38
Co-committed-by: phoenix <kundeng00@pm.me>
